==> micropython/micropython/ports/esp32/machine_pwm.c <==
#include <math.h>
#include "py/mphal.h"
#include "esp_err.h"
#include "driver/ledc.h"
#include "soc/ledc_periph.h"
#include "soc/gpio_sig_map.h"
#include "esp_clk_tree.h"
#include "py/mpprint.h"
#define debug_printf(...) mp_printf(&mp_plat_print, __VA_ARGS__); mp_printf(&mp_plat_print, " | %d at %s\n", __LINE__, __FILE__);
#define FADE 0
#define UI_RES_10_BIT  (10)
#define DUTY_10        UI_RES_10_BIT
#define MAX_10_DUTY    (1U << UI_RES_10_BIT)
#define UI_RES_16_BIT  (16)
#define DUTY_16        UI_RES_16_BIT
#define MAX_16_DUTY    (1U << UI_RES_16_BIT)
#define DUTY_NS        (1)
#define PWM_FREQ       (5000)
#define PWM_DUTY       ((1U << UI_RES_16_BIT) / 2)
#define EMPIRIC_FREQ   (10) // Hz

static void mp_machine_pwm_init_helper(machine_pwm_obj_t *self,
    size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {

    enum { ARG_freq, ARG_duty, ARG_duty_u16, ARG_duty_ns, ARG_invert, ARG_lightsleep };
    mp_arg_t allowed_args[] = {
        { MP_QSTR_freq, MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_duty, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_duty_u16, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_duty_ns, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_invert, MP_ARG_KW_ONLY | MP_ARG_BOOL, {.u_bool = self->output_invert} },
        { MP_QSTR_lightsleep, MP_ARG_KW_ONLY | MP_ARG_BOOL, {.u_bool = self->lightsleep} },
    };
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args,
        MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    self->lightsleep = args[ARG_lightsleep].u_bool;

    int freq = args[ARG_freq].u_int;
    if (freq != -1) {
        check_freq_ranges(self, freq, 40000000);
    }

    int duty = args[ARG_duty].u_int;
    int duty_u16 = args[ARG_duty_u16].u_int;
    int duty_ns = args[ARG_duty_ns].u_int;
    if (duty_u16 >= 0) {
        check_duty_u16(self, duty_u16);
    } else if (duty_ns >= 0) {
        check_duty_ns(self, duty_ns);
    } else if (duty >= 0) {
        check_duty_u10(self, duty);
    } else if (self->duty_scale == 0) {
        self->duty_scale = DUTY_16;
        self->duty_ui = PWM_DUTY;
    }

    self->output_invert = args[ARG_invert].u_bool;

    // Check the current mode and channel
    int mode = -1;
    int channel = -1;
    find_channel(self, &mode, &channel, freq);
    if (channel < 0) {
        mp_raise_msg_varg(&mp_type_RuntimeError, MP_ERROR_TEXT("out of %sPWM channels:%d"), self->lightsleep ? "light sleep capable " : "", self->lightsleep ? LEDC_CHANNEL_MAX : LEDC_SPEED_MODE_MAX *LEDC_CHANNEL_MAX);
    }
    self->mode = mode;
    self->channel = channel;

    // Check if freq wasn't passed as an argument
    if ((freq == -1) && (mode >= 0) && (channel >= 0)) {
        // Check if already set, otherwise use the default freq.
        // It is possible in case:
        // pwm = PWM(pin, freq=1000, duty=256)
        // pwm = PWM(pin, duty=128)
        if (chans[mode][channel].timer >= 0) {
            freq = timers[mode][chans[mode][channel].timer].freq;
        }
        if (freq <= 0) {
            freq = PWM_FREQ;
        }
    }
    set_freq_duty(self, freq);
}

static mp_obj_t mp_machine_pwm_make_new(const mp_obj_type_t *type,
    size_t n_args, size_t n_kw, const mp_obj_t *args) {
    mp_arg_check_num(n_args, n_kw, 1, 2, true);

    // start the PWM subsystem if it's not already running
    if (!pwm_inited) {
        pwm_init();
        #if FADE
        ledc_fade_func_install(0);
        #endif
        pwm_inited = true;
    }

    // create PWM object from the given pin
    machine_pwm_obj_t *self = mp_obj_malloc(machine_pwm_obj_t, &machine_pwm_type);
    self_reset(self);

    self->pin = machine_pin_get_id(args[0]);

    // Process the remaining parameters.
    mp_map_t kw_args;
    mp_map_init_fixed_table(&kw_args, n_kw, args + n_args);
    mp_machine_pwm_init_helper(self, n_args - 1, args + 1, &kw_args);
    return MP_OBJ_FROM_PTR(self);
}

static void mp_machine_pwm_freq_set(machine_pwm_obj_t *self, mp_int_t freq) {
    pwm_is_active(self);
    check_freq_ranges(self, freq, 40000000);
    if (freq == timers[self->mode][self->timer].freq) {
        return;
    }
    set_freq_duty(self, freq);
}
