==> micropython/micropython/ports/renesas-ra/machine_pwm.c <==
#include "py/mphal.h"
#include "py/mperrno.h"
#include "pin.h"
#include "ra/ra_gpt.h"

static void mp_machine_pwm_init_helper(machine_pwm_obj_t *self, size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    uint32_t D = 0ul;

    enum { ARG_freq, ARG_duty };
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_freq, MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_duty, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} }
    };

    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    if (args[ARG_freq].u_int != -1) {
        if ((args[ARG_freq].u_int < 0) || (args[ARG_freq].u_int > 24000000)) {
            mp_raise_ValueError(MP_ERROR_TEXT("freq should be 0-24000000"));
        } else {
            self->freq = args[ARG_freq].u_int;
        }
    }

    ra_gpt_timer_init(self->pwm->pin, self->ch, self->id, 0, (float)self->freq);

    if (args[ARG_duty].u_int != -1) {
        if ((args[ARG_duty].u_int < 0) || (args[ARG_duty].u_int > 100)) {
            mp_raise_ValueError(MP_ERROR_TEXT("duty should be 0-100"));
        } else {
            self->duty = args[ARG_duty].u_int;
        }
    }

    D = self->duty * ra_gpt_timer_get_period(self->ch);
    ra_gpt_timer_set_duty(self->ch, self->id, (uint32_t)(D / 100));

    if (self->duty && self->freq) {
        ra_gpt_timer_start(self->ch);
        self->active = 1;
    }
}

static mp_obj_t mp_machine_pwm_make_new(const mp_obj_type_t *type, size_t n_args, size_t n_kw, const mp_obj_t *args) {
    mp_hal_pin_obj_t pin_id = MP_OBJ_NULL;
    machine_pwm_obj_t *self = MP_OBJ_NULL;

    enum { ARG_pin, ARG_freq, ARG_duty };
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_pin,  MP_ARG_REQUIRED | MP_ARG_OBJ, {.u_obj = MP_OBJ_NULL} },
        { MP_QSTR_freq, MP_ARG_INT, {.u_int = -1} },
        { MP_QSTR_duty, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = -1} }
    };

    mp_arg_check_num(n_args, n_kw, 1, 3, true);
    mp_arg_val_t init_args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all_kw_array(n_args, n_kw, args, MP_ARRAY_SIZE(allowed_args), allowed_args, init_args);

    // Get GPIO and optional device to connect to PWM.
    pin_id = mp_hal_get_pin_obj(init_args[ARG_pin].u_obj);

    if (pin_id) {
        for (int i = 0; i < MP_ARRAY_SIZE(machine_pwm_obj); i++) {
            if (pin_id->pin == machine_pwm_obj[i].pwm->pin) {
                self = &machine_pwm_obj[i];
                break;
            }
        }

        if (self) {
            if (ra_gpt_timer_is_pwm_pin(self->pwm->pin)) {
                // start the PWM running for this channel
                mp_map_t kw_args;
                mp_map_init_fixed_table(&kw_args, n_kw, args + n_args);
                mp_machine_pwm_init_helper(self, n_args - 1, args + 1, &kw_args);
            } else {
                mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("Pin(%d) has no timer output"), self->pwm->pin);
            }
        } else {
            mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("Pin(%d) is used with other peripheral"), pin_id->pin);
        }
    } else {
        mp_raise_ValueError(MP_ERROR_TEXT("Pin doesn't exist"));
    }

    return MP_OBJ_FROM_PTR(self);
}

static void mp_machine_pwm_freq_set(machine_pwm_obj_t *self, mp_int_t freq) {
    if (freq) {
        ra_gpt_timer_set_freq(self->ch, (float)freq);
        self->freq = (uint32_t)ra_gpt_timer_get_freq(self->ch);
        if (!self->freq) {
            mp_raise_ValueError(MP_ERROR_TEXT("freq should be 0-24000000"));
        } else
        if (!self->active) {
            ra_gpt_timer_start(self->ch);
            self->active = 1;
        }
    } else {
        ra_gpt_timer_stop(self->ch);
        ra_gpt_timer_set_freq(self->ch, (float)freq);
        self->freq = 0;
        self->active = 0;
    }
}
